# scikit-ued

./: .codeclimate.yml  .coveragerc  .gitattributes  .gitignore  .mention-bot  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTORS.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  RELEASE-CHECKLIST.rst  RELEASE.rst  appveyor.yml  codecov.yml  dev-requirements.txt  pyproject.toml  release-description.py  requirements.txt  setup.cfg  setup.py  test.py  tox.ini
.appveyor/: install-miniconda.ps1  install-miniconda.ps1.REMOVED.git-id  install.ps1  install.ps1.REMOVED.git-id  run_with_env.cmd  windows_sdk.cmd
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.travis/: install.sh  run.sh  upload_coverage.sh
cif2cell-1.2.10/: ESPInterfaces.py  LICENSE.REMOVED.git-id  PKG-INFO  README  cif2cell  cif2cell.REMOVED.git-id  elementdata.py  setup.py  spacegroupdata.py.REMOVED.git-id  uctools.py.REMOVED.git-id  utils.py  utils.py.REMOVED.git-id
docs/: Makefile  api.rst  cmdline.rst  conf.py  index.rst  installation.rst  make.bat  references.txt  whatsnew.rst
skued/: __init__.py  __main__.py  affine.py  affine.py.REMOVED.git-id  array_utils.py  array_utils.py.REMOVED.git-id  eproperties.py  fft.py  iter_utils.py  parallel.py  patterson.py  plot_utils.py  potential_map.py  quantities.py  thin_films.py  transformations.py  transformations.py.REMOVED.git-id  utils.py  voigt.py  voigt.py.REMOVED.git-id
test_cache/: 1521124-176429.cif  1521124.cif
tests/: test_affine.py  test_array_utils.py  test_eproperties.py  test_patterson.py  test_plot_utils.py  test_potential_map.py  test_thin_films.py  test_voigt.py
wheelhouse/: Pillow-5.1.0-cp36-cp36m-win_amd64.whl.REMOVED.git-id  PyCifRW-4.4-cp36-cp36m-win_amd64.whl.REMOVED.git-id  PyWavelets-0.5.2-cp36-none-win_amd64.whl.REMOVED.git-id  cloudpickle-0.5.3-py2.py3-none-any.whl.REMOVED.git-id  dask-0.17.5-py3-none-any.whl.REMOVED.git-id  decorator-4.3.0-py2.py3-none-any.whl.REMOVED.git-id  networkx-2.1-py2.py3-none-any.whl.REMOVED.git-id  npstreams-1.5.1-py3-none-any.whl.REMOVED.git-id  numpy-1.14.3-cp36-none-win_amd64.whl.REMOVED.git-id  scikit_image-0.14.0-cp36-none-win_amd64.whl.REMOVED.git-id  (+6 more)
(+552 files in other folders)
